--- a/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
+++ b/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
@@ -13,18 +13,18 @@
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="RestSharp" Version="106.12.0" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516">
+		<PackageReference Include="RestSharp" Version="107.3.0" />
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.35.0.42613">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Taurit.Libraries.NaturalLanguageTimespanParser" Version="0.0.3-beta" />
-		<PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.246501">
+		<PackageReference Include="Taurit.Libraries.NaturalLanguageTimespanParser" Version="0.0.4-beta" />
+		<PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.310801">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0-rc.2.21480.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Update="wwwroot\css\reviewapp.css">
