--- a/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
+++ b/source/Taurit.TodoistTools.Review/Taurit.TodoistTools.Review.csproj
@@ -13,15 +13,15 @@
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Lindhart.Analyser.MissingAwaitWarning" Version="2.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="RestSharp" Version="108.0.1" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.42.0.51121">
+		<PackageReference Include="Lindhart.Analyser.MissingAwaitWarning" Version="*" />
+		<PackageReference Include="Newtonsoft.Json" Version="*" />
+		<PackageReference Include="RestSharp" Version="108.0.*" />
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.*">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Taurit.Libraries.NaturalLanguageTimespanParser" Version="0.0.4-beta" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.*" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Update="wwwroot\css\reviewapp.css">
