--- a/source/Taurit.TodoistTools.Review/wwwroot/js/package.json
+++ b/source/Taurit.TodoistTools.Review/wwwroot/js/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "@types/jquery": "^3.5.14"
+    "@types/autosize": "^4.0.1",
+    "@types/jquery": "^3.5.14",
+    "@types/knockout": "^3.4.72"
   }
 }
